--- a/index.html
+++ b/index.html
@@ -12,25 +12,27 @@
 
 <body>
     <header class="header">
-        <nav class="header__nav">
-            <div class="header__inner">
-                <ul class="header__list">
-                    <li class="header__item header__item--item--size"><button class="header__btn" href="#"><img src="assets/images/burger.svg" alt="" class="header__img-btn"></button></li>
-                    <li class="header__item">
-                        <a href="#" class="header__logo-link"><img src="assets/images/logo.svg" alt="" class="header__img-logo"></a>
-                    </li>
-                </ul>
-            </div>
-            <div class="header__inner">
-                <ul class="header__list">
-                    <li class="header__item header__item--item--visibility"><button class="header__btn"><img src="assets/images/call.svg" alt="" class="header__img-btn"></button></li>
-                    <li class="header__item header__item--item--visibility"><button class="header__btn"><img src="assets/images/chat.svg" alt="" class="header__img-btn"></button></li>
-                    <li class="header__item header__item--item--visibility header__item--item--size"><button class="header__btn"><img src="assets/images/profile.svg" alt="" class="header__img-btn"></button></li>
-                    <li class="header__item divider"><button class="header__btn"><img src="assets/images/repair.svg" alt="" class="header__img-btn"></button></li>
-                    <li class="header__item"><button class="header__btn"><img src="assets/images/checkstatus.svg" alt="" class="header__img-btn"></button></li>
-                </ul>
-            </div>
-        </nav>
+        <div class="inner-wrapper">
+            <nav class="header__nav">
+                <div class="header__inner">
+                    <ul class="header__list">
+                        <li class="header__item header__item--item--size"><button class="header__btn divider-left" href="#"><img src="assets/images/burger.svg" alt="" class="header__img-btn"></button></li>
+                        <li class="header__item">
+                            <a href="#" class="header__logo-link"><img src="assets/images/logo.svg" alt="" class="header__img-logo"></a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="header__inner">
+                    <ul class="header__list">
+                        <li class="header__item header__item--item--visibility"><button class="header__btn"><img src="assets/images/call.svg" alt="" class="header__img-btn"></button></li>
+                        <li class="header__item header__item--item--visibility"><button class="header__btn"><img src="assets/images/chat.svg" alt="" class="header__img-btn"></button></li>
+                        <li class="header__item header__item--item--visibility header__item--item--size"><button class="header__btn"><img src="assets/images/profile.svg" alt="" class="header__img-btn"></button></li>
+                        <li class="header__item"><button class="header__btn divider-right"><img src="assets/images/repair.svg" alt="" class="header__img-btn"></button></li>
+                        <li class="header__item"><button class="header__btn"><img src="assets/images/checkstatus.svg" alt="" class="header__img-btn"></button></li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
     </header>
     <main class="main">
         <div class="inner-wrapper">
