--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <header class="header">
+    <header class="header header--bottom-line--blue">
         <div class="inner-wrapper">
             <nav class="header__nav">
                 <div class="header__inner">
@@ -22,7 +22,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="header__inner">
+                <div class="header__inner header__inner--margin-right--size">
                     <ul class="header__list">
                         <li class="header__item header__item--item--visibility"><button class="header__btn"><img src="assets/images/call.svg" alt="" class="header__img-btn"></button></li>
                         <li class="header__item header__item--item--visibility"><button class="header__btn"><img src="assets/images/chat.svg" alt="" class="header__img-btn"></button></li>
